# MCP23017

./: .gitignore  .gitignore copy  CMakeLists.txt  README.md
.github/: copilot-instructions.md
MCP23017/: README.md
components/mcp23017/: CMakeLists.txt  idf_component.yml
example/: CMakeLists.txt
example/main/: io_MCP23017.c  main.c
examples/plugin/: CMakeLists.txt
include/: MCP23017.h
main/: CMakeLists.txt  idf_component.yml  io_MCP23017.c
main/include/: MCP23017.h
main/src/: MCP23017.c
src/: MCP23017.c
